--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "youtube-thing",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hianson.github.io/jayta",
   "dependencies": {
     "antd": "^3.0.3",
     "lodash": "^4.17.4",
@@ -14,6 +15,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy" : "npm run build&&gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
   }
 }
